--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cc"
-version = "1.0.30"
-authors = ["Alex Crichton <alex@alexcrichton.com>"]
+version = "1.0.25"
+authors = ["Alex Crichton <aleax@alexcrichton.com>"]
 license = "MIT/Apache-2.0"
 repository = "https://github.com/alexcrichton/cc-rs"
 homepage = "https://github.com/alexcrichton/cc-rs"
